fixed player styling

--- a/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/components/Layout/Layout.css
+++ b/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/components/Layout/Layout.css
@@ -7,3 +7,11 @@ body{
     padding: 0;
     margin: 0;
 }
+
+.light{
+    background-color: rgb(206, 193, 193);
+}
+
+.dark{
+    background-color: rgb(107, 101, 101);
+}
