--- a/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/components/Header/Header.css
+++ b/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/components/Header/Header.css
@@ -27,12 +27,17 @@
 
 }
 
+.site-logo{
+    
+}
+
 .Header {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    text-decoration: none;
 }
 
 .icon {
