--- a/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/components/Header/Header.css
+++ b/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/components/Header/Header.css
@@ -39,6 +39,7 @@ a {
     align-items: center;
     width: 100%;
     text-decoration: none;
+    padding: 1rem;
 }
 
 .icon {
@@ -63,6 +64,7 @@ select {
     .Header {
         flex-direction: row;
         font-size: x-large;
+        padding:0px;
     }
     button{
         min-width: 150%;
