--- a/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/components/InnerLayout/InnerLayout.css
+++ b/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/components/InnerLayout/InnerLayout.css
@@ -1,5 +1,25 @@
-.InnertLayout-nav{
+.inner-layout {
     display: flex;
-    justify-content: space-evenly;
-    margin: 2rem 1rem;
-}
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh; /* Ensure at least full viewport height */
+  }
+  
+  .inner-layout main {
+    width: 100%;
+    max-width: 1200px;
+    padding: 2rem;
+    flex: 1; /* This ensures main expands to fill the available vertical space */
+  }
+  
+  .InnertLayout-nav {
+    display: flex;
+    justify-content: space-around;
+  }
+  
+  @media (min-width: 710px) {
+    body {
+      font-size: xx-large;
+    }
+  }
+  
