--- a/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/components/Layout/Layout.css
+++ b/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/components/Layout/Layout.css
@@ -1,12 +1,28 @@
-body{
+.Layout {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    min-height: 100vh; /* Ensure at least full viewport height */
+  }
+  
+  .Layout header {
+    background-color: #333;
+    color: white;
+    padding: 1rem;
+    text-align: center;
+  }
+  
+  .Layout main {
+    flex: 1; 
+    min-height: 100%;
+  }
+  
+  .Layout .Player {
+    position: fixed;
+    bottom: 0;
     width: 100%;
-    height: 100%;
-    padding: 0;
-    margin: 0;
-}
+  }
+  
+  
 
 .light{
     background-color: rgb(206, 193, 193);
