--- a/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/pages/EpisodePreview/episodePreview.css
+++ b/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/pages/EpisodePreview/episodePreview.css
@@ -2,6 +2,9 @@ body{
     align-items: center;
     margin: 0;
 }
+.episodeLayout{
+    padding-bottom: 13rem;
+}
 
 .favoutiteButton{
     background-color: transparent;
