--- a/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/pages/ShowPreview/ShowPreview.css
+++ b/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/pages/ShowPreview/ShowPreview.css
@@ -10,6 +10,7 @@ body{
     align-items: center;
     margin:1rem;
     border-radius: 10px 10px 0px 0px ;
+    padding-bottom: 20rem;
 }
 
 .GoToSeasons{
