--- a/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/pages/Favourites/Favourite.css
+++ b/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/pages/Favourites/Favourite.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 2rem;
+  margin-top: 2rem;
+
   width: 100%;
 }
 
@@ -23,15 +24,20 @@
 .sort-buttons {
   display: flex;
   gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  margin-left: 1rem;
 }
 
-.sort-buttons button {
-  padding: 0.5rem 1rem;
-  border: none;
-  background-color: #333;
-  color: white;
-  cursor: pointer;
-  border-radius: 5px;
+
+.sortAZ{
+  background-color: cadetblue;
+  border-radius: 15px;
+}
+
+.sortDate{
+  background-color: cadetblue;
+  border-radius: 15px;
 }
 
 .sort-buttons button:hover {
@@ -52,14 +58,18 @@
   align-items: center;
   border: 1px solid #ccc;
   border-radius: 10px;
-  padding: 1rem;
-  background-color: white;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: transparent;
+  border: 2px solid black;
+  border-radius: 15px;
+  box-shadow: 10px 10px 25px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 10px 10px 25px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 25px 0px rgba(0, 0, 0, 0.75);
+  overflow: hidden;
+  margin: 1rem;
 }
 
-.favourites-item img {
+.seasonImage {
   width: 100%;
-  max-width: 150px;
   border-radius: 5px;
 }
 
@@ -70,7 +80,7 @@
 .favourite-button {
   padding: 0.5rem 1rem;
   border: none;
-  background-color: #333;
+  background-color: transparent;
   color: white;
   cursor: pointer;
   border-radius: 5px;
@@ -83,4 +93,16 @@
 .no-favourites {
   font-size: 1.2rem;
   color: #666;
+}
+
+@media(min-width: 1000px){
+  .sort-buttons{
+gap:5rem;
+  }
+}
+
+@media(min-width: 1400px){
+  .sort-buttons{
+gap:15rem;
+  }
 }
