--- a/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/pages/History/History.css
+++ b/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/pages/History/History.css
@@ -53,39 +53,37 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid #ccc;
+    border: 2px solid #1a1919;
     border-radius: 10px;
-    padding: 1rem;
-    background-color: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 1rem;
+    background-color: transparent;
+    box-shadow: 10px 10px 25px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 10px 10px 25px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 10px 10px 25px 0px rgba(0, 0, 0, 0.75);
+    overflow: hidden;
+    border-radius: 15px;
   }
   
   .episode-image {
-    width: 100%;
-    max-width: 100px;
+    width: 112%;
     border-radius: 5px;
+    margin: 0;
+    height: 120%;
   }
   
   .history-item h3 {
     margin: 1rem 0;
   }
    .favourite-button {
-  background-color: #333;
+  background-color: transparent;
   max-width: 100px;
   }
-  .preview-button {
-    padding: 0.5rem 1rem;
-    margin: 0.5rem;
-    border: none;
-    background-color: #333;
-    color: white;
-    cursor: pointer;
-    border-radius: 5px;
-    max-width: 100px;
+  button .favourite-button{
+    background-color: transparent;
   }
   
-  .preview-button:hover, .favourite-button:hover {
-    background-color: #555;
+   .favourite-button:hover {
+    font-size: xx-large;
   }
   
   .no-history {
@@ -111,4 +109,8 @@
    .no-history{
      grid-column: 2;
    }
+ }
+
+ .light{
+  
  }
