--- a/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/pages/Home/Home.css
+++ b/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/pages/Home/Home.css
@@ -6,6 +6,8 @@
     display: flex;
     flex-direction: column;
     margin-top:1em ;
+    margin-left:1em ;
+    margin-right: 1em;
   }
   
   .genreFilter {
@@ -19,12 +21,20 @@
   .sortButtonOldNew{
     font-size: large;
     max-width: 150px;
-    border-radius: black solid 2px ;
+    background-color: cadetblue;
+    border-radius: 15px;
+    padding: 0.1em;
+    margin:1rem;
+    margin-left: 1.5rem;
   }
   .sortButtonZA{
     font-size: large;
     max-width: 150px;
-    border-radius: black solid 2px ;
+    background-color: cadetblue;
+    border-radius: 15px;
+    padding: 0.1em;
+    margin:1rem;
+    margin-left: 1.5rem;
   }
   .podcastList {
     display: grid;
@@ -49,8 +59,11 @@
   }
   
   img {
-    width: 100%;
+    top: 0;
+    width: 120%;
+    margin-top: 0;
     border-radius: 15px 15px 0px 0px;
+   
   }
   
   .isLoading {
@@ -67,6 +80,24 @@
   display: grid;
   flex-direction: column;
   margin-bottom: 20px;
+}
+.search-bar{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.Input{
+  width: 100%;
+  margin:1rem;
+  margin-left: 3em;
+  height: 2em;
+}
+.clear-button{
+  width: 100%;
+  margin-left: 2em;
+  padding: 1em;
+
 }
 
 .genreFilter {
@@ -99,10 +130,32 @@
       .sortButtonOldNew{
         min-width: 100px;
           grid-column: 6;
+          background-color: cadetblue;
+          border-radius: 15px;
+          padding: 0.1em;
       }
       .sortButtonZA{
           grid-column: 4;
           min-width: 100px;
+          background-color: cadetblue;
+          border-radius: 15px;
+          padding: 0.1em;
+      }
+      .clear-button{
+        min-width: 60%;
+        margin-left: 2em;
+        padding: 1em;
+        max-height: 5rem;
+        padding-top: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      
+      }
+      .Input{
+        min-height: 2rem;
+        font-size: larger;
+        margin-left: 1.4em;
       }
   }
   
@@ -110,7 +163,7 @@
   
   @media (min-width: 1000px) {
     .podcastList {
-      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
     }
     .isLoading{
       grid-column: 3;
