--- a/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/pages/ShowPreview/ShowPreview.css
+++ b/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/pages/ShowPreview/ShowPreview.css
@@ -11,12 +11,27 @@ body{
     margin:1rem;
     border-radius: 10px 10px 0px 0px ;
     padding-bottom: 20rem;
+    border: 2px solid black;
+    border-radius: 15px;
+    box-shadow: 10px 10px 25px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 10px 10px 25px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 10px 10px 25px 0px rgba(0, 0, 0, 0.75);
+    overflow: hidden;
+    margin-left: 2rem;
 }
-
+.seasonImg{
+    width:100%;
+    border-radius: 15px 15px 0px 0px;
+}
+img .seasonImg{
+    border-radius: 15px 15px 0px 0px;
+}
 .GoToSeasons{
    color: coral;
 }
-
+.ShowInfo{
+    padding: 1rem;
+}
 .GoToSeasons :hover{
     color:rgb(0, 189, 16);
 }
