--- a/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/components/Player/Player.css
+++ b/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/components/Player/Player.css
@@ -1,9 +1,9 @@
 .footer-container {
-  display: none;
+  display: block;
   position: fixed;
   bottom: 0;
   width: 100%;
-  z-index: 10; /* Adjust as needed */
+  z-index: 10;
   box-shadow: 1px -11px 5px 3px rgba(77, 82, 87, 0.54);
   -webkit-box-shadow: 1px -11px 5px 3px rgba(194, 216, 201, 0.54);
   -moz-box-shadow: 1px -11px 5px 3px rgba(200, 221, 207, 0.54);
@@ -31,6 +31,7 @@
     cursor: pointer;
     font-size: larger;
     background-color: transparent;
+    margin: 0;
   }
   
   .play-pause-btn:hover {
@@ -92,7 +93,7 @@
   }
   
   .light .audio-player {
-    background-color: yellowgreen;
+    background-color: #d3934b;
   }
   
   .light .play-pause-btn {
@@ -104,7 +105,7 @@
   }
   
   .dark .play-pause-btn {
-    background-color: #0fbcc9;
+    background-color: transparent;
   }
   
   .settings-btn {
@@ -125,3 +126,51 @@
   
 
   
+ @media(min-width: 700px){
+     .play-pause-btn {
+       color: #fff;
+       font-weight: 600;
+      border: none;
+       border-radius: 5px;
+       cursor: pointer;
+       font-size: larger;
+       background-color: transparent;
+      padding: 0;
+       margin: 0;
+       margin-left: 5rem;
+     }
+     .progress-bar {
+       margin: 20px;
+      margin-left:16rem;
+     }
+     .time-display {
+     font-size: 16px;
+       margin-left: 10rem;
+     }
+   }
+
+   @media(min-width: 1000px){
+    .play-pause-btn {
+    
+      margin-left: 16rem;
+    }
+    .progress-bar {
+     margin-left:22rem;
+    }
+    .time-display {
+      margin-left: 10rem;
+    }
+  }
+
+  @media(min-width: 2000px){
+    .play-pause-btn {
+    
+      margin-left: 30rem;
+    }
+    .progress-bar {
+     margin-left:43rem;
+    }
+    .time-display {
+      margin-left: 20rem;
+    }
+  }
