fixed layout vstyling with media player present.

--- a/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/pages/EpisodePreview/episodePreview.css
+++ b/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/pages/EpisodePreview/episodePreview.css
@@ -10,14 +10,7 @@ body{
     background-color: transparent;
     border: 0;
 }
-.episodeTile{
-        padding: 1rem;
-        margin: 1em;
-        border-radius: 15px;
-        aspect-ratio: 1 / 1;
-        padding: 1rem;
-        margin: 1em;
-}
+
 .EpisodesContainer{
     display: flex;
     flex-direction: column;
@@ -47,4 +40,14 @@ body{
 .listItem{
     text-decoration: none;
     list-style-type: none;
+    padding-bottom: 0;
+    padding: 1rem;
+    margin: 1rem;
+}
+
+.playButton{
+  max-width: 100px;
+  justify-self: center;
+  align-self: center;
+  margin-left: 2.9rem;
 }
