--- a/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/pages/Home/Home.css
+++ b/buhkas465-wfo2401-groupb-buhlekasa-djs11/src/pages/Home/Home.css
@@ -3,6 +3,7 @@
 
   
   .HomePagePodcasts {
+    padding-bottom: 15rem;
     display: flex;
     flex-direction: column;
     margin-top:1em ;
@@ -56,8 +57,14 @@
     -webkit-box-shadow: 10px 10px 25px 0px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 10px 10px 25px 0px rgba(0, 0, 0, 0.75);
     overflow: hidden;
+    padding: 0;
   }
-  
+  .homeImg{
+     width: 110%;
+     margin-top: 0;
+     top: 0;
+
+  }
   img {
     top: 0;
     width: 120%;
